--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+dotenv = "0.15.0"
+reqwest = { version = "0.12", features = ["json"] }
+serde_json = "1.0.133"
+tokio = { version = "1", features = ["full"] }
