--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+chrono = "0.4.38"
 dotenv = "0.15.0"
 reqwest = { version = "0.12", features = ["json"] }
 serde_json = "1.0.133"
+slug = "0.1.6"
 tokio = { version = "1", features = ["full"] }
