--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 chrono = "0.4.38"
 dotenv = "0.15.0"
 reqwest = { version = "0.12", features = ["json"] }
+rusqlite = "0.32.1"
 serde_json = "1.0.133"
 slug = "0.1.6"
 tokio = { version = "1", features = ["full"] }
