--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 [dependencies]
 chrono = "0.4.38"
 dotenv = "0.15.0"
+http-cache-reqwest = "0.15.0"
 reqwest = { version = "0.12", features = ["json"] }
+reqwest-middleware = "0.4.0"
 rusqlite = "0.32.1"
 serde_json = "1.0.133"
 slug = "0.1.6"
