--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ rusqlite = "0.32.1"
 serde_json = "1.0.133"
 slug = "0.1.6"
 tokio = { version = "1", features = ["full"] }
+uuid = { version = "1.11.0", features = ["v4"] }
