--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,6 @@ reqwest-middleware = "0.4.0"
 rusqlite = "0.32.1"
 serde_json = "1.0.133"
 slug = "0.1.6"
+tera = "1.20.0"
 tokio = { version = "1", features = ["full"] }
 uuid = { version = "1.11.0", features = ["v4"] }
