--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,5 @@ serde_json = "1.0.133"
 slug = "0.1.6"
 tera = "1.20.0"
 tokio = { version = "1", features = ["full"] }
+urlencoding = "2.1.3"
 uuid = { version = "1.11.0", features = ["v4"] }
