--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ md5 = "0.7.0"
 reqwest = { version = "0.12", features = ["json"] }
 reqwest-middleware = "0.4.0"
 rusqlite = "0.32.1"
+scraper = "0.21.0"
 serde_json = "1.0.133"
 slug = "0.1.6"
 tera = "1.20.0"
