process RSS entries: extract substack URL

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 chrono = "0.4.38"
 dotenv = "0.15.0"
+futures = "0.3.31"
 http-cache-reqwest = "0.15.0"
 md5 = "0.7.0"
 reqwest = { version = "0.12", features = ["json"] }
