--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.38"
+config = { version = "0.14.1", features = ["toml"] }
 dotenv = "0.15.0"
 futures = "0.3.31"
 http-cache-reqwest = "0.15.0"
@@ -13,6 +14,7 @@ reqwest = { version = "0.12", features = ["json"] }
 reqwest-middleware = "0.4.0"
 rusqlite = "0.32.1"
 scraper = "0.21.0"
+serde = { version = "1.0.215", features = ["derive"] }
 serde_json = "1.0.133"
 slug = "0.1.6"
 tera = "1.20.0"
