--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ dotenv = "0.15.0"
 futures = "0.3.31"
 http-cache-reqwest = "0.15.0"
 md5 = "0.7.0"
+once_cell = "1.20.2"
 reqwest = { version = "0.12", features = ["json"] }
 reqwest-middleware = "0.4.0"
 rusqlite = "0.32.1"
