--- a/config/config.toml
+++ b/config/config.toml
@@ -1,2 +1,3 @@
 org_roam_dir = "~/org/roam"
 templates_dir = "templates/**/*"
+updated_after_file_path = "~/org-roam/org_readwise_rust_updated_after.txt"
