put document categories in settings

--- a/config/config.toml
+++ b/config/config.toml
@@ -1,3 +1,4 @@
 org_roam_dir = "~/org/roam"
 templates_dir = "templates/**/*"
 updated_after_file_path = "~/org-roam/org_readwise_rust_updated_after.txt"
+document_categories = ["epub", "article", "pdf"]
